# quick_bot_demo

./: .gitignore  README.md  bot.py  ddl.sql  import_utils.py  main.py  pyproject.toml  requirements.txt  start.sh  stop.sh  test.py
api/: http_utils.py  local_api.py  payment_api.py
bot_router/: callback.py  reply.py  router.py
config/: config.py  config.yaml  config_dev.yaml  long_str.py  redis_keys.py
img/: qr_code.py
log/: logger.py
mode/: base_mode.py  tg_user.py  toujia_user.py  toujia_user_bot.py  toujia_user_transfer_group.py  user_bot.py  user_transfer_group.py
page/: base_page.py
page/child/: child_page.py
page/father/: father_page.py
page/payment/: payment_page.py
pyrogram_bug/: utils.py
rabbitmq/: mq_client.py  mq_config.py  mq_consumer.py
rabbitmq/handlers/: payment_handler.py
scheduler/: bot_scheduler.py
service/: chat_member_updated_service.py
utils/: bot_message.py  common.py  db_demo.py  mysql_utils.py  redis_utils.py
