[project]
name = "quick-bot-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles==24.1.0",
    "aiohttp>=3.13.2",
    "apscheduler==3.11.0",
    "async-timeout==5.0.1 ; python_full_version < '3.11.3'",
    "greenlet==3.2.3 ; (python_full_version < '3.14' and platform_machine == 'AMD64') or (python_full_version < '3.14' and platform_machine == 'WIN32') or (python_full_version < '3.14' and platform_machine == 'aarch64') or (python_full_version < '3.14' and platform_machine == 'amd64') or (python_full_version < '3.14' and platform_machine == 'ppc64le') or (python_full_version < '3.14' and platform_machine == 'win32') or (python_full_version < '3.14' and platform_machine == 'x86_64')",
    "logbook==1.8.2",
    "pillow>=12.1.0",
    "pyaes==1.6.1",
    "pycryptodome>=3.23.0",
    "pymysql==1.1.1",
    "pyrogram==2.0.106",
    "pysocks==1.7.1",
    "pyyaml==6.0.2",
    "qrcode>=8.2",
    "redis==6.2.0",
    "sqlalchemy==2.0.41",
    "typing-extensions==4.14.0",
    "tzdata==2025.2 ; sys_platform == 'win32'",
    "tzlocal==5.3.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
